# llm-eval-psychometrics

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  quickstart.md
docs/api/: bias.md  irt.md  reliability.md  utils.md
docs/examples/: irt_demo.md
examples/: demo_demand.py  demo_irt.py  demo_mmlu_pro.py  demo_mmlu_pro_report.py
llm_eval_psychometrics/: __init__.py
llm_eval_psychometrics/bias/: __init__.py  calibration.py  detection.py
llm_eval_psychometrics/demand/: __init__.py  plots.py  profiler.py
llm_eval_psychometrics/irt/: __init__.py  diagnostics.py  models.py  plots.py
llm_eval_psychometrics/reliability/: __init__.py  agreement.py  power.py
llm_eval_psychometrics/utils/: __init__.py  data.py
tests/: test_bias.py  test_demand.py  test_irt.py  test_reliability.py
