[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-psychometrics"
version = "0.1.0"
description = "Psychometric diagnostics for LLM benchmarks and evaluation systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ruoyi Zhu" },
]
keywords = [
    "llm",
    "evaluation",
    "psychometrics",
    "irt",
    "benchmark",
    "item-response-theory",
    "bias-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "girth>=0.8",
    "krippendorff>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/zhux0445/llm-eval-psychometrics"
Documentation = "https://zhux0445.github.io/llm-eval-psychometrics"
Repository = "https://github.com/zhux0445/llm-eval-psychometrics"
Issues = "https://github.com/zhux0445/llm-eval-psychometrics/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_eval_psychometrics"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
